@@ -194,6 +194,11 @@ however, there are minor differences, listed below.
 @item The priority strings "+COMP" are a no-op
 @tab TLS compression is no longer available.
 
+@item The SSL 3.0 protocol is a no-op
+@tab SSL 3.0 is no longer compiled in by default. It is a legacy protocol
+which is completely eliminated from public internet. As such it was removed
+to reduce the attack vector for applications using the library.
+
 @item The hash function SHA2-224 is a no-op for TLS1.2
 @tab TLS 1.3 no longer uses SHA2-224, and it was never a widespread hash
 algorithm. As such it was removed for simplicity.
